# okapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release.sh  release.toml
.github/workflows/: ci.yml
examples/custom_schema/: Cargo.toml  README.md
examples/custom_schema/src/: error.rs  main.rs  message.rs  post.rs
examples/dyn_templates/: Cargo.toml  README.md
examples/dyn_templates/src/: main.rs
examples/dyn_templates/templates/: template-1.html.hbs
examples/json-web-api/: .gitignore  Cargo.toml  README.md  docker-compose.yml  template.yaml
examples/json-web-api/src/: lib.rs  main.rs
examples/lifetimes/: Cargo.toml
examples/lifetimes/src/: main.rs
examples/nested/: Cargo.toml
examples/nested/src/: main.rs
examples/nested/src/api/: message.rs  mod.rs  post.rs
examples/openapi_attributes/: Cargo.toml  README.md
examples/openapi_attributes/src/: main.rs
examples/raw_identifiers/: Cargo.toml
examples/raw_identifiers/src/: main.rs
examples/secure_request_guard/: Cargo.toml  README.md
examples/secure_request_guard/src/: api_key.rs  cookies.rs  http_auth.rs  main.rs  no_auth.rs  oauth2.rs  open_id.rs
examples/special-types/: Cargo.toml  README.md
examples/special-types/src/: main.rs
examples/streams/: Cargo.toml  README.md
examples/streams/src/: main.rs
examples/test-flatten-extension-field/: Cargo.toml
examples/test-flatten-extension-field/src/: main.rs
examples/test-flatten-extension-field/tests/expected/: openapi.json
examples/uuid/: Cargo.toml  README.md
examples/uuid/src/: main.rs  uuid.rs
examples/uuid_usage/: Cargo.toml  README.md
examples/validation/: Cargo.toml
examples/validation/src/: main.rs
examples/websocket/: Cargo.toml
examples/websocket_usage/: .gitignore  Cargo.toml
examples/websocket_usage/src/: main.rs
okapi/: CHANGELOG.md  Cargo.toml
okapi/src/: lib.rs  merge.rs  openapi.rs  openapi3.rs
rocket-okapi/: CHANGELOG.md  Cargo.toml  expanded.rs
rocket-okapi-codegen/: Cargo.toml
rocket-okapi-codegen/src/: attr.rs  doc_attr.rs  lib.rs  openapi_spec.rs  parse_routes.rs  route_attr.rs
rocket-okapi-codegen/src/openapi_attr/: doc_attr.rs  mod.rs  route_attr.rs
rocket-okapi-codegen/src/responder_derive/: attribute.rs  mod.rs  response_attr.rs  utils.rs
rocket-okapi-codegen/src/routes_with_openapi/: mod.rs
rocket-okapi-codegen/tests/: test.rs
rocket-okapi/rapi-doc/: rapi-doc.html
rocket-okapi/rapidoc/: README.md  index.html  oauth-receiver.html
rocket-okapi/src/: error.rs  gen.rs  generator.rs  handler.rs  lib.rs  main.rs  rapi_doc.rs  rapidoc.rs  responder_impls.rs  responses_impls.rs  settings.rs  swagger_ui.rs  util.rs
rocket-okapi/src/handlers/: content.rs  mod.rs  openapi.rs  redirect.rs
rocket-okapi/src/request/: from_data_impls.rs  from_form_multi_param_impls.rs  from_form_param_impls.rs  from_param_impls.rs  from_query_multi_param_impls.rs  from_query_param_impls.rs  from_request_impls.rs  from_segments_impls.rs  mod.rs
rocket-okapi/src/response/: mod.rs  responder_impls.rs
rocket-okapi/swagger-ui/: README.md  index.html  swagger-initializer.js  swagger-ui-bundle.js  swagger-ui.js
rocket-okapi/tests/: db_pool.rs  deprecated.rs
