[workspace]
members = [
    "okapi",
    "rocket-okapi",
    "rocket-okapi-codegen",
    "examples/json-web-api",
    "examples/custom_schema",
    "examples/nested",
    "examples/uuid_usage",
    "examples/special-types",
    "examples/secure_request_guard",
    "examples/streams",
    "examples/dyn_templates",
    "examples/openapi_attributes",
    "examples/raw_identifiers",
    "examples/websocket",
]
resolver = "2"
