[workspace]
members = [
    "okapi",
    "rocket-okapi",
    "rocket-okapi-codegen",
    "examples/json-web-api",
    "examples/custom_schema",
    "examples/nested",
    "examples/uuid_usage",
    "examples/special-types",
    "examples/secure_request_guard",
    "examples/streams",
    "examples/dyn_templates",
    "examples/openapi_attributes",
    "examples/raw_identifiers",
    "examples/websocket",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
rocket = { version = "=0.5.1", default-features = false, features = [ "json" ] }
rocket_ws = "0.1.1"
rocket_http = "=0.5.1"
rocket_dyn_templates = "=0.2.0"
rocket_db_pools = "=0.1.0"
rocket_sync_db_pools = "=0.1.0"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
