[package]
name = "okapi"
description = "Structs for OpenAPI (AKA Swagger) documents"
repository = "https://github.com/GREsau/okapi"
version = "0.7.0-rc.1"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
keywords = ["rust", "openapi", "swagger"]
categories = ["web-programming"]

[dependencies]
schemars = { version = "0.8", features = ["uuid1"] }
indexmap = { version = "1.2", features = ["serde-1"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[features]
# Implements `JsonSchema` for `Schemars` and `Okapi` types themselves.
impl_json_schema = ["schemars/impl_json_schema"]
# Preserve the order of items in schema and other part of the OpenAPI documentation.
preserve_order = ["schemars/preserve_order"]