[package]
name = "okapi"
description = "Structs for OpenAPI (AKA Swagger) documents"
repository = "https://github.com/GREsau/okapi"
version = "0.7.0"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
keywords = ["rust", "openapi", "swagger"]
categories = ["web-programming"]

[dependencies]
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }

[features]
# Implements `JsonSchema` for `Schemars` and `Okapi` types themselves.
impl_json_schema = ["schemars/impl_json_schema"]
# Preserve the order of items in schema and other part of the OpenAPI documentation.
preserve_order = ["schemars/preserve_order"]
schemars-alpha = []

[package.metadata.docs.rs]
all-features = true
