[package]
name = "rocket_okapi_codegen"
description = "Macros supporting rocket_okapi"
repository = "https://github.com/GREsau/okapi"
version = "0.8.0-rc.2"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
keywords = ["rust", "openapi", "swagger", "rocket"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
rocket_http = { git = "https://github.com/ranklab-gaming/Rocket" }
darling = "0.13"
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
