[package]
name = "rocket_okapi"
description = "OpenAPI (AKA Swagger) document generation for Rocket applications"
repository = "https://github.com/GREsau/okapi"
version = "0.8.0-alpha-1"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
keywords = ["rust", "openapi", "swagger", "rocket"]
categories = ["web-programming"]

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
schemars = { version = "0.8" }
okapi = { version = "0.6.0-alpha-1", path = "../okapi" }
rocket_okapi_codegen = { version = "=0.7.0-alpha-1", path = "../rocket-okapi-codegen" }
serde = "1.0"
serde_json = "1.0"

[features]
# Feature to enable Swagger UI for rendering documention
# Project: https://github.com/swagger-api/swagger-ui
swagger = []
# Feature to enable RapiDoc for rendering documentation
# Project: https://github.com/mrin9/RapiDoc
rapidoc = []