[package]
name = "rocket_okapi"
description = "OpenAPI (AKA Swagger) document generation for Rocket applications"
repository = "https://github.com/GREsau/okapi"
version = "0.8.0"
authors = [ "Graham Esau <gesau@hotmail.co.uk>" ]
edition = "2021"
license = "MIT"
readme = "../README.md"
keywords = [ "rust", "openapi", "swagger", "rocket" ]
categories = [ "web-programming" ]

[dependencies]
rocket = { version = "=0.5.0", default-features = false, features = [ "json" ] }
schemars = { version = "0.8.16" }
okapi = { version = "0.7.0", path = "../okapi" }
rocket_okapi_codegen = { version = "=0.8.0", path = "../rocket-okapi-codegen" }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
# Rocket dependency but not re-exported
# See issue: https://github.com/GREsau/schemars/issues/104
# time = { version = "0.2.27" }
rocket_dyn_templates = { version = "=0.1.0", optional = true }
rocket_db_pools = { version = "=0.1.0", optional = true }
rocket_sync_db_pools = { version = "=0.1.0", optional = true }
rocket_ws = { version = "=0.1.0", optional = true }

[dev-dependencies]
rocket_sync_db_pools = { version = "0.1.0", features = [ "diesel_sqlite_pool" ] }

[features]
default = [ "preserve_order" ]

# Preserve the order of items in schema and other part of the OpenAPI documentation.
preserve_order = [ "schemars/preserve_order", "okapi/preserve_order" ]
# Feature to enable Swagger UI for rendering documentation
# Project: https://github.com/swagger-api/swagger-ui
swagger = [  ]
# Feature to enable RapiDoc for rendering documentation
# Project: https://github.com/mrin9/RapiDoc
rapidoc = [  ]
# Allow the use of UUIDs
uuid = [ "rocket/uuid", "schemars/uuid" ]
# Re-export Rocket feature flag
# https://docs.rs/rocket/latest/rocket/serde/msgpack/struct.MsgPack.html
msgpack = [ "rocket/msgpack" ]
# Re-export Rocket feature flag
# https://rocket.rs/v0.5/guide/requests/#secret-key
secrets = [ "rocket/secrets" ]
# Re-export Rocket feature flag
# https://rocket.rs/v0.5/guide/configuration/#mutual-tls
mtls = [ "rocket/mtls" ]

[package.metadata.docs.rs]
all-features = true
