[package]
name = "nested"
version = "0.1.0"
authors = [
    "Maxime Borges <contact@maximeborg.es>",
    "Ralph Bisschops <ralph.bisschops.dev@gmail.com>",
]
edition = "2021"

[dependencies]
rocket = { workspace = true }
rocket_okapi = { path = "../../rocket-okapi", features = [ "rapidoc" ] }
serde = { workspace = true }
serde_json = { workspace = true }
