[package]
name = "raw_identifiers"
version = "0.1.0"
authors = [ "Alex Payne <apayne@esri.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", default-features = false, features = [ "json" ] }
rocket_okapi = { path = "../../rocket-okapi", features = [ "rapidoc", "swagger" ] }
