[package]
name = "secure_request_guard"
version = "0.1.0"
authors = [
    "Kristoffer Ödmark <kristoffer.odmark90@gmail.com>",
    "Ralph Bisschops <ralph.bisschops.dev@gmail.com>",
]
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0", default-features = false, features = [ "json", "secrets" ] }
rocket_okapi = { path = "../../rocket-okapi", features = [ "rapidoc", "swagger", "secrets" ] }
serde = "1.0"
tokio = "1.6"
serde_json = "1.0"
