[package]
name = "secure_request_guard"
version = "0.1.0"
authors = [
    "Kristoffer Ödmark <kristoffer.odmark90@gmail.com>",
    "Ralph Bisschops <ralph.bisschops.dev@gmail.com>",
]
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket.git", rev = "8b9d906cc4923fdf6f2b860e0da2ab00f1993796", default-features = false, features = [
    "json",
    "secrets",
] }
rocket_okapi = { path = "../../rocket-okapi", features = [
    "rapidoc",
    "swagger",
    "secrets",
] }
serde = "1.0"
tokio = "1.6"
serde_json = "1.0"
