[package]
name = "secure_request_guard"
version = "0.1.0"
authors = [
    "Kristoffer Ödmark <kristoffer.odmark90@gmail.com>",
    "Ralph Bisschops <ralph.bisschops.dev@gmail.com>",
]
edition = "2021"

[dependencies]
rocket = { workspace = true, features = ["json", "secrets"] }
rocket_okapi = { path = "../../rocket-okapi", features = ["rapidoc", "swagger", "secrets"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.6"
