[package]
name = "uuid"
version = "0.1.0"
authors = [
    "Graham Esau <gesau@hotmail.co.uk>", 
    "Rafael Epplee <raffomania@gmail.com>",
    "Ralph Bisschops <ralph.bisschops.dev@gmail.com>", 
]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json", "uuid"] }
schemars = { version = "0.8", features = ["preserve_order", "uuid"] }
okapi = { version = "0.7.0-alpha-1", path = "../../okapi" }
rocket_okapi = { version = "0.8.0-alpha-1", path = "../../rocket-okapi", features = ["swagger", "rapidoc", "uuid"] }
serde = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }
