[package]
name = "uuid"
version = "0.1.0"
authors = [
    "Graham Esau <gesau@hotmail.co.uk>",
    "Rafael Epplee <raffomania@gmail.com>",
    "Ralph Bisschops <ralph.bisschops.dev@gmail.com>",
]
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket.git", rev = "8b9d906cc4923fdf6f2b860e0da2ab00f1993796", default-features = false, features = [
    "json",
    "uuid",
] }
schemars = { version = "0.8", features = ["uuid1"] }
rocket_okapi = { path = "../../rocket-okapi", features = [
    "swagger",
    "rapidoc",
    "uuid",
] }
serde = "1.0"
uuid = { version = "1.1.1", features = ["v4"] }
