[package]
name = "uuid"
version = "0.1.0"
authors = [
    "Graham Esau <gesau@hotmail.co.uk>",
    "Rafael Epplee <raffomania@gmail.com>",
    "Ralph Bisschops <ralph.bisschops.dev@gmail.com>",
]
edition = "2021"

[dependencies]
rocket = { workspace = true, features = ["json", "uuid"] }
schemars = { workspace = true, features = ["uuid1"] }
rocket_okapi = { path = "../../rocket-okapi", features = ["swagger", "rapidoc", "uuid"] }
serde = { workspace = true }
uuid = { version = "1.1.1", features = ["v4"] }
